worked on the employees responsiveness of 600px

--- a/employees/employees.html
+++ b/employees/employees.html
@@ -10,6 +10,10 @@
 <body>
     <div class="base-body">
         <section class="side-navigation">
+            <div class="terminate-icon">
+                <button id="terminate">X</button>
+            </div>
+
             <div class="navigation-section">
                 <div class="navigation-logo">
                     <img src="../media/logo.png" alt="" id="logo" width="86" height="75">    
@@ -108,6 +112,12 @@
 
 
         <section class="dashboard-section">
+            <div class="hamburger">   
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </div>
+
             <div class="dashboard-top">
                 <p id="dashboardHead">Employees</p>
                 <div>
@@ -266,4 +276,6 @@
 
     </div>
 </body>
+
+<script src="employee.js"></script>
 </html>
