completed Employees with min-width: 901px

--- a/employees/employees.html
+++ b/employees/employees.html
@@ -169,7 +169,7 @@
                         <path d="M10.93 2.59998L6 10.5" stroke="#292D32" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
                         </svg>
                         
-`                   <select id="myselect">
+`                   <select id="myselect" class="dropdown">
                         <option value=""><b>Filter By</b></option>
                         <option value="paris" id="optionId">Paris</option>
                         <option value="london">London</option>
@@ -178,6 +178,10 @@
                     </select>
                 </div>
 
+            </div>
+
+            <div class="alt-search">
+                <input type="text" id="alt-search-text" placeholder="Search Employee">                 
             </div>
 
             <div class="employees">
