worked on the entire responsiveness of Promotion Page

--- a/leave management/leave.html
+++ b/leave management/leave.html
@@ -207,7 +207,7 @@
                                 <p id="leave-employee">Mr Andrew Oseni</p>
                             </div>
                             <div class="inactive-button">
-                                Active
+                                Inactive
                             </div>
                         </div>
                         <div class="position-profile">
@@ -234,7 +234,7 @@
                                 <p id="leave-employee">Mr Andrew Oseni</p>
                             </div>
                             <div class="inactive-button">
-                                Active
+                                Inactive
                             </div>
                         </div>
                         <div class="position-profile">
@@ -261,7 +261,7 @@
                                 <p id="leave-employee">Mr Andrew Oseni</p>
                             </div>
                             <div class="inactive-button">
-                                Active
+                                Inactive
                             </div>
                         </div>
                         <div class="position-profile">
@@ -315,7 +315,7 @@
                                 <p id="leave-employee">Mr Andrew Oseni</p>
                             </div>
                             <div class="inactive-button">
-                                Active
+                                Inactive
                             </div>
                         </div>
                         <div class="position-profile">
@@ -369,7 +369,7 @@
                                 <p id="leave-employee">Mr Andrew Oseni</p>
                             </div>
                             <div class="inactive-button">
-                                Active
+                                Inactive
                             </div>
                         </div>
                         <div class="position-profile">
