completed the responsiveness of the pages on all screen sizes

--- a/leave management/leave.html
+++ b/leave management/leave.html
@@ -179,6 +179,10 @@
 
             </div>
 
+            <div class="alt-search">
+                <input type="text" id="alt-search-text" placeholder="Search Employee">                 
+            </div>
+
             <div class="employees">
                 <div class="employee-card">
                     <div class="employee-image">
