--- a/employees/employees.html
+++ b/employees/employees.html
@@ -35,7 +35,7 @@
                             <path d="M3.12004 10.92C1.30504 12.135 1.30504 14.115 3.12004 15.3225C5.18254 16.7025 8.56504 16.7025 10.6275 15.3225C12.4425 14.1075 12.4425 12.1275 10.6275 10.92C8.57254 9.54752 5.19004 9.54752 3.12004 10.92Z" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
                             <path d="M13.7549 15C14.2949 14.8875 14.8049 14.67 15.2249 14.3475C16.3949 13.47 16.3949 12.0225 15.2249 11.145C14.8124 10.83 14.3099 10.62 13.7774 10.5" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
                             </svg>
-                        <a href="" id="employ-text">Employees</a>
+                        <a href="../employees/employees.html" id="employ-text">Employees</a>
                     </div>
                     <div class="nav-item">
                         <svg width="18" height="19" viewBox="0 0 18 19" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -63,7 +63,7 @@
                             <path d="M6 10.25H9" stroke="#373737" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
                             <path d="M6 13.25H12" stroke="#373737" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
                             </svg>                            
-                        <a href="">Leave Management</a>
+                        <a href="../leave management/leave.html">Leave Management</a>
                     </div>
                     <div class="nav-item">
                         <svg width="18" height="19" viewBox="0 0 18 19" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -72,7 +72,7 @@
                             <path d="M6 10.25H9" stroke="#373737" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
                             <path d="M6 13.25H12" stroke="#373737" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
                             </svg>
-                        <a href="">Resignation</a>
+                        <a href="../resignation/resignation.html">Resignation</a>
                     </div>
                     <div class="nav-item">
                         <svg width="18" height="19" viewBox="0 0 18 19" fill="none" xmlns="http://www.w3.org/2000/svg">
