--- a/termination/termination.html
+++ b/termination/termination.html
@@ -10,6 +10,10 @@
 <body>
     <div class="base-body">
         <section class="side-navigation">
+            <div class="terminate-icon">
+                <button id="terminate">X</button>
+            </div>
+
             <div class="navigation-section">
                 <div class="navigation-logo">
                     <img src="../media/logo.png" alt="" id="logo" width="86" height="75">    
@@ -109,6 +113,12 @@
 
 
         <section class="dashboard-section">
+            <div class="hamburger">   
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </div>
+
             <div class="dashboard-top">
                 <p id="dashboardHead">Termination</p>
                 <div>
@@ -168,6 +178,10 @@
                     </select>
                 </div>
 
+            </div>
+
+            <div class="alt-search">
+                <input type="text" id="alt-search-text" placeholder="Search Employee">                 
             </div>
 
             <div class="employees">
@@ -392,4 +406,10 @@
 
     </div>
 </body>
+
+
+
+
+
+<script src="termination.js"></script>
 </html>
