worked on the responsiveness of the Login page and corrected the Password input issue

--- a/main/index.html
+++ b/main/index.html
@@ -27,14 +27,14 @@
                     <div class="sigin-in-form">
                         <div class="inputs">
                             <form action="">
-                                <div class="inputs">
+                                <div class="inputs" id="emailInput">
                                     <!-- <input type="text" placeholder="Email Address/ Username"> -->
                                     <div class="alt-div">
                                         <div class="small-div">Email Address</div>
                                         <input type="text" id="alt-email" placeholder="Email Address">
                                     </div>
                                 </div>
-                                <div class="inputs">
+                                <div class="inputs" >
                                     <!-- <input type="password" placeholder="Password"> -->
                                     <div class="alt-div">
                                         <div class="smalldiv">Password</div>
