added the details page for some of the modules

--- a/promotion/promotion.html
+++ b/promotion/promotion.html
@@ -28,14 +28,14 @@
                             <!-- <img src="../media/home.png" alt="" id="home-icon"> -->
                         <a href="../dashboard/dashboard.html" id="dash-text">Dashboard</a>
                     </div>
-                    <div class="nav-item" id="">
+                    <div class="nav-item">
                         <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M6.86992 8.15252C6.79492 8.14502 6.70492 8.14502 6.62242 8.15252C4.83742 8.09252 3.41992 6.63002 3.41992 4.83002C3.41992 2.99252 4.90492 1.50002 6.74992 1.50002C8.58742 1.50002 10.0799 2.99252 10.0799 4.83002C10.0724 6.63002 8.65492 8.09252 6.86992 8.15252Z" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-                            <path d="M12.3075 3.00002C13.7625 3.00002 14.9325 4.17752 14.9325 5.62502C14.9325 7.04252 13.8075 8.19752 12.405 8.25002C12.345 8.24252 12.2775 8.24252 12.21 8.25002" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-                            <path d="M3.12004 10.92C1.30504 12.135 1.30504 14.115 3.12004 15.3225C5.18254 16.7025 8.56504 16.7025 10.6275 15.3225C12.4425 14.1075 12.4425 12.1275 10.6275 10.92C8.57254 9.54752 5.19004 9.54752 3.12004 10.92Z" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-                            <path d="M13.7549 15C14.2949 14.8875 14.8049 14.67 15.2249 14.3475C16.3949 13.47 16.3949 12.0225 15.2249 11.145C14.8124 10.83 14.3099 10.62 13.7774 10.5" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                            <path d="M6.86992 8.15252C6.79492 8.14502 6.70492 8.14502 6.62242 8.15252C4.83742 8.09252 3.41992 6.63002 3.41992 4.83002C3.41992 2.99252 4.90492 1.50002 6.74992 1.50002C8.58742 1.50002 10.0799 2.99252 10.0799 4.83002C10.0724 6.63002 8.65492 8.09252 6.86992 8.15252Z" stroke="#373737" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                            <path d="M12.3075 3.00002C13.7625 3.00002 14.9325 4.17752 14.9325 5.62502C14.9325 7.04252 13.8075 8.19752 12.405 8.25002C12.345 8.24252 12.2775 8.24252 12.21 8.25002" stroke="#373737" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                            <path d="M3.12004 10.92C1.30504 12.135 1.30504 14.115 3.12004 15.3225C5.18254 16.7025 8.56504 16.7025 10.6275 15.3225C12.4425 14.1075 12.4425 12.1275 10.6275 10.92C8.57254 9.54752 5.19004 9.54752 3.12004 10.92Z" stroke="#373737" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                            <path d="M13.7549 15C14.2949 14.8875 14.8049 14.67 15.2249 14.3475C16.3949 13.47 16.3949 12.0225 15.2249 11.145C14.8124 10.83 14.3099 10.62 13.7774 10.5" stroke="#373737" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
                             </svg>
-                        <a href="../employees/employees.html" id="">Employees</a>
+                        <a href="../employees/employees.html">Employees</a>
                     </div>
                     <div class="nav-item">
                         <svg width="18" height="19" viewBox="0 0 18 19" fill="none" xmlns="http://www.w3.org/2000/svg">
