--- a/resignation/resignation-details.html
+++ b/resignation/resignation-details.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="promotion-details.css">
-    <link rel="stylesheet" href="promotion.css">
-    <title>Promotion</title>
+    <link rel="stylesheet" href="resignation-details.css">
+    <link rel="stylesheet" href="resignation.css">
+    <title>Resignation</title>
 </head>
 <body>
     <div class="base-body">
@@ -48,32 +48,32 @@
                             
                         <a href="../training/training.html">Training</a>
                     </div>
-                    <div class="nav-item" id="promotionId">
+                    <div class="nav-item">
+                        <svg width="18" height="19" viewBox="0 0 18 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M15.75 5.75002V13.25C15.75 15.5 14.625 17 12 17H6C3.375 17 2.25 15.5 2.25 13.25V5.75002C2.25 3.50002 3.375 2.00002 6 2.00002H12C14.625 2.00002 15.75 3.50002 15.75 5.75002Z" stroke="#373737" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+                            <path d="M10.875 3.87502V5.37502C10.875 6.20002 11.55 6.87502 12.375 6.87502H13.875" stroke="#373737" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+                            <path d="M6 10.25H9" stroke="#373737" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+                            <path d="M6 13.25H12" stroke="#373737" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+                            </svg>
+                        <a href="../promotion/promotion.html">Promotion</a>
+                    </div>
+                    <div class="nav-item" id="">
+                        <svg width="18" height="19" viewBox="0 0 18 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M15.75 5.75002V13.25C15.75 15.5 14.625 17 12 17H6C3.375 17 2.25 15.5 2.25 13.25V5.75002C2.25 3.50002 3.375 2.00002 6 2.00002H12C14.625 2.00002 15.75 3.50002 15.75 5.75002Z" stroke="#373737" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+                            <path d="M10.875 3.87502V5.37502C10.875 6.20002 11.55 6.87502 12.375 6.87502H13.875" stroke="#373737" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+                            <path d="M6 10.25H9" stroke="#373737" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+                            <path d="M6 13.25H12" stroke="#373737" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+                            </svg>                          
+                        <a href="../leave management/leave.html" id="">Leave Management</a>
+                    </div>
+                    <div class="nav-item" id="resignationId">
                         <svg width="18" height="19" viewBox="0 0 18 19" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M15.75 5.75002V13.25C15.75 15.5 14.625 17 12 17H6C3.375 17 2.25 15.5 2.25 13.25V5.75002C2.25 3.50002 3.375 2.00002 6 2.00002H12C14.625 2.00002 15.75 3.50002 15.75 5.75002Z" stroke="white" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
                             <path d="M10.875 3.87502V5.37502C10.875 6.20002 11.55 6.87502 12.375 6.87502H13.875" stroke="white" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
                             <path d="M6 10.25H9" stroke="white" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
                             <path d="M6 13.25H12" stroke="white" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
-                            </svg>
-                        <a href="../promotion/promotion.html" id="promotion-text">Promotion</a>
-                    </div>
-                    <div class="nav-item">
-                        <svg width="18" height="19" viewBox="0 0 18 19" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M15.75 5.75002V13.25C15.75 15.5 14.625 17 12 17H6C3.375 17 2.25 15.5 2.25 13.25V5.75002C2.25 3.50002 3.375 2.00002 6 2.00002H12C14.625 2.00002 15.75 3.50002 15.75 5.75002Z" stroke="#373737" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
-                            <path d="M10.875 3.87502V5.37502C10.875 6.20002 11.55 6.87502 12.375 6.87502H13.875" stroke="#373737" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
-                            <path d="M6 10.25H9" stroke="#373737" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
-                            <path d="M6 13.25H12" stroke="#373737" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
-                            </svg>                            
-                        <a href="../leave management/leave.html">Leave Management</a>
-                    </div>
-                    <div class="nav-item">
-                        <svg width="18" height="19" viewBox="0 0 18 19" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M15.75 5.75002V13.25C15.75 15.5 14.625 17 12 17H6C3.375 17 2.25 15.5 2.25 13.25V5.75002C2.25 3.50002 3.375 2.00002 6 2.00002H12C14.625 2.00002 15.75 3.50002 15.75 5.75002Z" stroke="#373737" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
-                            <path d="M10.875 3.87502V5.37502C10.875 6.20002 11.55 6.87502 12.375 6.87502H13.875" stroke="#373737" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
-                            <path d="M6 10.25H9" stroke="#373737" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
-                            <path d="M6 13.25H12" stroke="#373737" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
-                            </svg>
-                        <a href="../resignation/resignation.html">Resignation</a>
+                            </svg>      
+                        <a href="" id="resignation-text">Resignation</a>
                     </div>
                     <div class="nav-item">
                         <svg width="18" height="19" viewBox="0 0 18 19" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -120,7 +120,7 @@
             </div>
 
             <div class="dashboard-top">
-                <p id="dashboardHead">Promotion</p>
+                <p id="dashboardHead">Resignation</p>
                 <div>
                     <select id="myselect">
                         <option value=""><b>Admin Username</b></option>
@@ -142,20 +142,20 @@
                 <div class="bio-data-section">
                     <div id="profile-container">
                             <div class="profile-image-container">
-                                <img src="../media/promotions/c.png" alt=""  id="profile-image">
+                                <img src="../media/leave/a.png" alt=""  id="profile-image">
                             </div>
                             <div class="profile">  
                                 <p id="profile-name">Mr Andrew Oseni</p>                   
                             </div>
                             <div class="position-profile">
                                 <div class="initial-position">
-                                    <p id="promotion-position">Former Position</p>
-                                    <p id="promotion-department">Communication</p>       
+                                    <p id="promotion-position">Present Position</p>
+                                    <p id="promotion-department">Accounting</p>       
     
                                 </div>
                                 <div class="present-position">
-                                    <p id="promotion-position">Present Position</p>
-                                    <p id="promotion-department">Accouning</p>       
+                                    <p id="promotion-position">Previous Position</p>
+                                    <p id="promotion-department">Data Analyst</p>       
                                 </div>   
                             </div> 
 
@@ -168,7 +168,7 @@
                     <div class="promotion-container">
                     <div class="info-header">
                         <div class="info-texts">
-                            <label for="">Promoted On</label>
+                            <label for="">Resigned On</label>
                             <p id="promotion-date">12th  August 2025</p>
                         </div>
                         <div class="download-button">
